added StringUtils.isBlank